--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ a{
 .top{
     border-bottom: 1px solid #E7E9FC;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-    position: relative;
+    
 }
 .site{
     position: relative;
@@ -213,6 +213,7 @@ p{
 }
 .top .container{
     display: flex;
+    position: relative;
 }
 
 .header-nav {
@@ -333,16 +334,17 @@ img{
     display: inline-block;
 }
 
-
 .container {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    padding: 0 15px 0 15px;
-    flex-direction: column;
-    justify-content: center;
+            max-width: 320px;
+            padding: 0 15px;
+            margin: 0 auto;
+            display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
 }
+    
+
 .icon{
     display: none;
     width: 264px;
@@ -806,6 +808,10 @@ img{
 }
 
 @media (min-width:768px){
+    .container {
+            max-width: 768px;
+        }
+
     .top .logo{
         margin: 24px 120px 24px 16px;
     }
@@ -814,7 +820,7 @@ img{
         margin-right: 120px;
     }
     .header-nav{
-        width: 600px;
+        width: 100%;
     }
     .contacts{
         width: 150px;
@@ -865,15 +871,12 @@ img{
     }
     .members{
         justify-content: center;
-        width: 552px;
+       
     }
     .member{
         width: initial;
     }
     
-    .portfolios{
-        max-width: 736px;
-    }
     .apps{
         flex-basis: calc((100% - 24px) / 2);
     }
@@ -916,7 +919,7 @@ img{
 }
 @media (min-width:1158px) {
     .container{
-        width: 1158px; 
+        max-width: 1158px; 
     }
     .contacts .navigation{
         display: flex;
@@ -925,7 +928,8 @@ img{
         margin: 0;
     }
     .contacts{
-        width: initial;
+        width: 100%;
+
     }
     .cnt{
         padding: 24px 0 24px 0;
