--- a/css/styles.css
+++ b/css/styles.css
@@ -820,7 +820,7 @@ img{
         margin-right: 120px;
     }
     .header-nav{
-        width: 100%;
+        width: 600px;
     }
     .contacts{
         width: 150px;
